<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/iv_cart_empty"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:src="@drawable/cart"
            android:scaleType="centerInside"
            android:visibility="visible"
            android:background="@drawable/circular_textview_bg_gray"/>

        <TextView
            android:id="@+id/tv_cart_empty"
            android:layout_below="@+id/iv_cart_empty"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:text="@string/txt_cart_empty"
            android:textColor="@color/gray12"
            android:textSize="15sp"/>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideOverlay"/>

    </RelativeLayout>
    <!--<android.support.v4.widget.SwipeRefreshLayout-->
        <!--android:id="@+id/swipeRefreshLayout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
    <!--</android.support.v4.widget.SwipeRefreshLayout>-->


    <com.flask.floatingactionmenu.FadingBackgroundView
        android:id="@+id/fadingBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|end"
        fab:layout_anchorGravity="bottom|right|end"
        android:layout_marginBottom="26dp"
        android:layout_marginRight="16dp"/>

    <com.flask.floatingactionmenu.FloatingActionMenu
        android:id="@+id/fam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        fab:layout_anchorGravity="bottom|right|end"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:elevation="7dp"
        fab:fab_labelStyles="@style/fab_labels_style2">

        <!--<com.flask.floatingactionmenu.FloatingActionButton-->
            <!--android:id="@+id/fab_main_cart_search_naver"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="8dp"-->
            <!--fab:fab_normal_icon="@drawable/ic_search_white_48dp"-->
            <!--fab:fab_labelText="@string/menu_mode_product_search"-->
            <!--fab:fab_colorNormal="@color/fab_green_color"-->
            <!--fab:fab_colorPressed="@color/fab_green_press_color"/>-->

        <!--<com.flask.floatingactionmenu.FloatingActionButton-->
            <!--android:id="@+id/fab_main_cart_favorite_add"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="8dp"-->
            <!--fab:fab_normal_icon="@drawable/cart_speed"-->
            <!--fab:fab_labelText="@string/fab_fav_add"-->
            <!--fab:fab_colorNormal="@color/fab_red_color"-->
            <!--fab:fab_colorPressed="@color/fab_red_press_color"-->
            <!--/>-->

        <com.flask.floatingactionmenu.FloatingActionButton
            android:id="@+id/fab_main_cart_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            fab:fab_normal_icon="@drawable/cart"
            fab:fab_labelText="@string/fab_nomral_add"
            fab:fab_colorNormal="@color/fab_blue_color"
            fab:fab_colorPressed="@color/fab_blue_press_color"
            />

        <com.flask.floatingactionmenu.FloatingActionToggleButton
            android:id="@+id/fab_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            fab:fab_normal_icon="@drawable/ic_add_white_24dp"
            fab:fab_toggle_icon="@drawable/ic_cancel_white_24dp"
            fab:fab_colorNormal="@color/fab_gray_color"
            fab:fab_colorPressed="@color/fab_gray_press_color"
            fab:fab_labelText="@string/fab_back" />
    </com.flask.floatingactionmenu.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>