<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar_actionbar"
            layout="@layout/toolbar_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/cv_cd_cart_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_actionbar"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@color/main_white_color">

                <LinearLayout
                    android:id="@+id/ll_item_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_mart_icon"
                            android:layout_width="52dp"
                            android:layout_height="52dp"
                            android:background="@drawable/circular_textview_bg_hom"
                            android:gravity="center"
                            android:textColor="@color/text_color_white"
                            android:textSize="25dp"
                            android:textStyle="bold"
                            android:transitionName="@string/transition_body" />
                        <Space
                            android:layout_width="10dp"
                            android:layout_height="1dp" />
                        <TextView
                            android:id="@+id/tv_cart_title"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:ellipsize="end"
                            android:text=""
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/large_text_size"
                            android:textStyle="bold"
                            android:transitionName="@string/transition_title" />
                        <Space
                            android:layout_width="6dp"
                            android:layout_height="1dp" />
                        <TextView
                            android:id="@+id/tv_cart_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text=""
                            android:textSize="15sp"
                            android:textColor="@color/text_color_gray_59"
                            android:transitionName="@string/transition_date" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/horizontal_line" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:ellipsize="end"
                        android:gravity="right"
                        android:singleLine="true"
                        android:text="Total "
                        android:textColor="@android:color/black"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/tv_items_total_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:ellipsize="end"
                        android:gravity="right"
                        android:singleLine="true"
                        android:text="16"
                        android:textColor="@android:color/black"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="5dp"
                        android:ellipsize="end"
                        android:gravity="right"
                        android:singleLine="true"
                        android:text=" |  Buy "
                        android:textColor="@android:color/black"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/tv_items_select_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:ellipsize="end"
                        android:gravity="right"
                        android:singleLine="true"
                        android:text="16"
                        android:textColor="@color/main_accent_color"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_cart_sort_toggle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_toLeftOf="@+id/iv_cart_modify"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/button_item_common_3dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/ic_playlist_add_check_white_24dp" />

                <ImageView
                    android:id="@+id/iv_cart_modify"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/button_item_common_3dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/ic_edit_white_48dp" />

                <ImageView
                    android:id="@+id/iv_cart_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toLeftOf="@+id/iv_cart_modify"
                    android:background="@color/button_material_light"
                    android:gravity="center"
                    android:src="@android:drawable/ic_menu_delete"
                    android:visibility="gone" />

            </RelativeLayout>

        </RelativeLayout>

        <View
            android:id="@+id/view_horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/cv_cd_cart_layout"
            android:background="@color/horizontal_line" />

        <!-- 카트 아이템 리스트 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/cv_cd_cart_layout"
            android:background="@color/main_bg_color"
            android:orientation="vertical"
            android:paddingTop="@dimen/cart_itemview_side_margin">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcv_cd_cart_listView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical" />


        </LinearLayout>

    </RelativeLayout>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_add_white_18dp"
        android:visibility="gone"
        fab:fab_colorNormal="@color/app_primary"
        fab:fab_colorPressed="@color/app_primary_pressed"
        fab:fab_colorRipple="@color/app_ripple" />


    <RelativeLayout
        android:id="@+id/rl_cart_detail_completed"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_gravity="bottom|right"
        android:background="@color/detail_completed_bg"
        android:gravity="center"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/rl_cart_detail_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="7dp"
                android:gravity="center"
                android:src="@drawable/cart" />

            <TextView
                android:id="@+id/tv_cart_detail_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/detail_purchase_comepleted"
                android:textColor="@color/grey_white_1000"
                android:textSize="17dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_cart_completed"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_cart_detail_box"
            android:layout_centerHorizontal="true"
            android:layout_gravity="right"
            android:layout_marginTop="12dp"
            android:background="@drawable/selector_purchase_completed_red_bg"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/detail_btn_purchase_comepleted"
            android:textColor="@color/text_color_white"
            android:textSize="16dp" />

    </RelativeLayout>

</FrameLayout>